--- a/Agence/templates/sidebar.html
+++ b/Agence/templates/sidebar.html
@@ -53,10 +53,10 @@
 
                 <li class="nav-header">EXAMPLES</li>
                 <li class="nav-item">
-                  <a href="pages/calendar.html" class="nav-link">
-                    <i class="nav-icon far fa-calendar-alt"></i>
+                  <a href="{% url 'postulation' %}" class="nav-link">
+                    <i class="nav-icon fas fa-handshake"></i>
                     <p>
-                      Calendar
+                      Postulation
                       <span class="badge badge-info right">2</span>
                     </p>
                   </a>
