--- a/Agence/templates/Agence/candidate.html
+++ b/Agence/templates/Agence/candidate.html
@@ -5,7 +5,7 @@ Candidate
 {% endblock title %}
 {% block content%}
 <a href="{% url 'add_candidate' %}">
-    <button type="button" class="btn btn-default float-right" data-toggle="modal" data-target="#modal-lg">
+    <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#modal-lg">
         Add candidate
     </button>
 </a>
